--- a/index.css
+++ b/index.css
@@ -195,6 +195,7 @@
     .text-brand-100{--tw-text-opacity:1;color:rgb(122 129 149 / var(--tw-text-opacity))}
     .text-brand-200{--tw-text-opacity:1;color:rgb(61 72 101 / var(--tw-text-opacity))}
     .text-brand-300{--tw-text-opacity:1;color:rgb(23 42 73 / var(--tw-text-opacity))}
+    .text-brand-500{--tw-text-opacity:1;color:rgb(21 32 53 / var(--tw-text-opacity))}
     .text-surface-50{--tw-text-opacity:1;color:rgb(243 246 247 / var(--tw-text-opacity))}
     .text-text-100{--tw-text-opacity:1;color:rgb(60 60 60 / var(--tw-text-opacity))}
     .text-text-400{--tw-text-opacity:1;color:rgb(93 93 93 / var(--tw-text-opacity))}
