--- a/index.css
+++ b/index.css
@@ -15,13 +15,11 @@
     .z-\[9999\]{z-index:9999}
     .mx-2{margin-left:0.5rem;margin-right:0.5rem}
     .mb-0{margin-bottom:0.0rem}
-    .mb-2{margin-bottom:0.5rem}
     .ml-0{margin-left:0.0rem}
     .ml-auto{margin-left:auto}
     .mr-0{margin-right:0.0rem}
     .mr-auto{margin-right:auto}
     .mt-0{margin-top:0.0rem}
-    .mt-2{margin-top:0.5rem}
     .block{display:block}
     .inline{display:inline}
     .flex{display:flex}
@@ -87,30 +85,21 @@
     .rounded-br{border-bottom-right-radius:0.24rem}
     .rounded-tl{border-top-left-radius:0.24rem}
     .rounded-tr{border-top-right-radius:0.24rem}
-    .border-b{border-bottom-width:0.18rem}
     .border-b-0{border-bottom-width:0.0rem}
     .border-b-2{border-bottom-width:0.125rem}
-    .border-l{border-left-width:0.18rem}
     .border-l-0{border-left-width:0.0rem}
     .border-l-2{border-left-width:0.125rem}
-    .border-r{border-right-width:0.18rem}
     .border-r-0{border-right-width:0.0rem}
     .border-r-2{border-right-width:0.125rem}
-    .border-t{border-top-width:0.18rem}
     .border-t-0{border-top-width:0.0rem}
     .border-t-2{border-top-width:0.125rem}
     .border-solid{border-style:solid}
     .\!border-red-500{--tw-border-opacity:1 !important;border-color:rgb(239 68 68 / var(--tw-border-opacity)) !important}
-    .border-accent-400\/\[100\%\]{border-color:rgb(42 183 215 / 100%)}
-    .border-brand-600\/\[100\%\]{border-color:rgb(19 28 45 / 100%)}
-    .border-surface-200\/\[100\%\]{border-color:rgb(202 209 215 / 100%)}
     .border-surface-50\/\[100\%\]{border-color:rgb(243 246 247 / 100%)}
     .border-surface-500\/\[100\%\]{border-color:rgb(93 108 125 / 100%)}
-    .bg-accent-400{--tw-bg-opacity:1;background-color:rgb(42 183 215 / var(--tw-bg-opacity))}
     .bg-accent-50{--tw-bg-opacity:1;background-color:rgb(238 251 253 / var(--tw-bg-opacity))}
     .bg-accent-500{--tw-bg-opacity:1;background-color:rgb(27 158 191 / var(--tw-bg-opacity))}
     .bg-black\/25{background-color:rgb(0 0 0 / 0.25)}
-    .bg-brand-500{--tw-bg-opacity:1;background-color:rgb(21 32 53 / var(--tw-bg-opacity))}
     .bg-brand-800{--tw-bg-opacity:1;background-color:rgb(15 19 30 / var(--tw-bg-opacity))}
     .bg-green-500{--tw-bg-opacity:1;background-color:rgb(34 197 94 / var(--tw-bg-opacity))}
     .bg-red-500{--tw-bg-opacity:1;background-color:rgb(239 68 68 / var(--tw-bg-opacity))}
@@ -118,7 +107,6 @@
     .bg-surface-950{--tw-bg-opacity:1;background-color:rgb(32 36 43 / var(--tw-bg-opacity))}
     .bg-surface-950\/\[80\%\]{background-color:rgb(32 36 43 / 80%)}
     .bg-white-100{--tw-bg-opacity:1;background-color:rgb(255 255 255 / var(--tw-bg-opacity))}
-    .bg-white-50{--tw-bg-opacity:1;background-color:rgb(255 255 255 / var(--tw-bg-opacity))}
     .bg-opacity-\[0\%\]{--tw-bg-opacity:0%}
     .bg-opacity-\[100\%\]{--tw-bg-opacity:100%}
     .bg-opacity-\[70\%\]{--tw-bg-opacity:70%}
@@ -144,15 +132,11 @@
     .pl-0{padding-left:0.0rem}
     .pl-10{padding-left:2.5rem}
     .pl-20{padding-left:5.0rem}
-    .pl-3{padding-left:0.75rem}
-    .pl-3\.5{padding-left:0.875rem}
     .pl-5{padding-left:1.25rem}
     .pl-7{padding-left:1.75rem}
     .pr-0{padding-right:0.0rem}
     .pr-10{padding-right:2.5rem}
     .pr-20{padding-right:5.0rem}
-    .pr-3{padding-right:0.75rem}
-    .pr-3\.5{padding-right:0.875rem}
     .pr-5{padding-right:1.25rem}
     .pr-7{padding-right:1.75rem}
     .pt-0{padding-top:0.0rem}
@@ -171,11 +155,11 @@
     .text-right{text-align:right}
     .font-body{font-family:Jost}
     .font-heading{font-family:Lora}
+    .text-2xl{font-size:1.50rem;line-height:2.00rem}
     .text-3xl{font-size:1.88rem;line-height:2.25rem}
     .text-4xl{font-size:2.25rem;line-height:2.50rem}
     .text-base{font-size:1.00rem;line-height:1.50rem}
     .text-lg{font-size:1.12rem;line-height:1.75rem}
-    .text-sm{font-size:0.88rem;line-height:1.25rem}
     .text-xl{font-size:1.25rem;line-height:1.75rem}
     .font-\[300\]{font-weight:300}
     .font-\[400\]{font-weight:400}
@@ -195,8 +179,6 @@
     .text-brand-100{--tw-text-opacity:1;color:rgb(122 129 149 / var(--tw-text-opacity))}
     .text-brand-200{--tw-text-opacity:1;color:rgb(61 72 101 / var(--tw-text-opacity))}
     .text-brand-300{--tw-text-opacity:1;color:rgb(23 42 73 / var(--tw-text-opacity))}
-    .text-brand-500{--tw-text-opacity:1;color:rgb(21 32 53 / var(--tw-text-opacity))}
-    .text-surface-50{--tw-text-opacity:1;color:rgb(243 246 247 / var(--tw-text-opacity))}
     .text-text-100{--tw-text-opacity:1;color:rgb(60 60 60 / var(--tw-text-opacity))}
     .text-text-400{--tw-text-opacity:1;color:rgb(93 93 93 / var(--tw-text-opacity))}
     .text-text-50{--tw-text-opacity:1;color:rgb(0 0 0 / var(--tw-text-opacity))}
@@ -206,13 +188,10 @@
     .text-white-200{--tw-text-opacity:1;color:rgb(255 255 255 / var(--tw-text-opacity))}
     .text-white-800{--tw-text-opacity:1;color:rgb(255 255 255 / var(--tw-text-opacity))}
     .text-opacity-\[100\%\]{--tw-text-opacity:100%}
-    .placeholder-text-700::-moz-placeholder{--tw-placeholder-opacity:1;color:rgb(176 176 176 / var(--tw-placeholder-opacity))}
-    .placeholder-text-700::placeholder{--tw-placeholder-opacity:1;color:rgb(176 176 176 / var(--tw-placeholder-opacity))}
     .opacity-0{opacity:0}
     .opacity-100{opacity:1}
     .opacity-\[100\%\]{opacity:100%}
     .shadow{--tw-shadow:3px 3px 5px 0px rgba(0,0,0,0.30);--tw-shadow-colored:3px 3px 5px 0px var(--tw-shadow-color);box-shadow:var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)}
-    .ring-0{--tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);--tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);box-shadow:var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)}
     .backdrop-blur-\[0px\]{--tw-backdrop-blur:blur(0px);-webkit-backdrop-filter:var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);backdrop-filter:var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)}
     .transition{transition-property:color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;transition-property:color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;transition-property:color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:150ms}
     .transition-all{transition-property:all;transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);transition-duration:150ms}
@@ -226,42 +205,24 @@
     .hover\:rounded-br:hover{border-bottom-right-radius:0.24rem}
     .hover\:rounded-tl:hover{border-top-left-radius:0.24rem}
     .hover\:rounded-tr:hover{border-top-right-radius:0.24rem}
-    .hover\:border-b:hover{border-bottom-width:0.18rem}
     .hover\:border-b-2:hover{border-bottom-width:0.125rem}
-    .hover\:border-l:hover{border-left-width:0.18rem}
     .hover\:border-l-2:hover{border-left-width:0.125rem}
-    .hover\:border-r:hover{border-right-width:0.18rem}
     .hover\:border-r-2:hover{border-right-width:0.125rem}
-    .hover\:border-t:hover{border-top-width:0.18rem}
     .hover\:border-t-2:hover{border-top-width:0.125rem}
     .hover\:border-solid:hover{border-style:solid}
     .hover\:border-accent-400\/\[100\%\]:hover{border-color:rgb(42 183 215 / 100%)}
-    .hover\:border-surface-500\/\[100\%\]:hover{border-color:rgb(93 108 125 / 100%)}
     .hover\:bg-accent-400:hover{--tw-bg-opacity:1;background-color:rgb(42 183 215 / var(--tw-bg-opacity))}
-    .hover\:bg-accent-600:hover{--tw-bg-opacity:1;background-color:rgb(25 127 161 / var(--tw-bg-opacity))}
-    .hover\:bg-brand-600:hover{--tw-bg-opacity:1;background-color:rgb(19 28 45 / var(--tw-bg-opacity))}
     .hover\:bg-surface-50:hover{--tw-bg-opacity:1;background-color:rgb(243 246 247 / var(--tw-bg-opacity))}
     .hover\:bg-opacity-\[100\%\]:hover{--tw-bg-opacity:100%}
     .hover\:text-accent-400:hover{--tw-text-opacity:1;color:rgb(42 183 215 / var(--tw-text-opacity))}
-    .hover\:text-surface-50:hover{--tw-text-opacity:1;color:rgb(243 246 247 / var(--tw-text-opacity))}
     .hover\:text-text-950:hover{--tw-text-opacity:1;color:rgb(246 246 246 / var(--tw-text-opacity))}
     .hover\:text-white-950:hover{--tw-text-opacity:1;color:rgb(255 255 255 / var(--tw-text-opacity))}
     .hover\:text-opacity-\[100\%\]:hover{--tw-text-opacity:100%}
     .hover\:text-shadow-none:hover{text-shadow:}
-    .focus\:rounded-bl:focus{border-bottom-left-radius:0.24rem}
-    .focus\:rounded-br:focus{border-bottom-right-radius:0.24rem}
-    .focus\:rounded-tl:focus{border-top-left-radius:0.24rem}
-    .focus\:rounded-tr:focus{border-top-right-radius:0.24rem}
-    .focus\:border-b:focus{border-bottom-width:0.18rem}
-    .focus\:border-l:focus{border-left-width:0.18rem}
-    .focus\:border-r:focus{border-right-width:0.18rem}
-    .focus\:border-t:focus{border-top-width:0.18rem}
-    .focus\:border-surface-500\/\[100\%\]:focus{border-color:rgb(93 108 125 / 100%)}
-    .focus\:ring-0:focus{--tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);--tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);box-shadow:var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)}
-    @media (min-width: 640px){.sm\:mb-2{margin-bottom:0.5rem}.sm\:ml-auto{margin-left:auto}.sm\:mr-0{margin-right:0.0rem}.sm\:mt-2{margin-top:0.5rem}.sm\:flex-row{flex-direction:row}.sm\:pb-0{padding-bottom:0.0rem}.sm\:pb-20{padding-bottom:5.0rem}.sm\:pl-0{padding-left:0.0rem}.sm\:pl-10{padding-left:2.5rem}.sm\:pr-0{padding-right:0.0rem}.sm\:pr-10{padding-right:2.5rem}.sm\:pt-0{padding-top:0.0rem}.sm\:pt-10{padding-top:2.5rem}.sm\:text-5xl{font-size:3.00rem;line-height:3.50rem}}
+    @media (min-width: 640px){.sm\:flex-row{flex-direction:row}.sm\:pb-0{padding-bottom:0.0rem}.sm\:pb-20{padding-bottom:5.0rem}.sm\:pl-0{padding-left:0.0rem}.sm\:pl-10{padding-left:2.5rem}.sm\:pr-0{padding-right:0.0rem}.sm\:pr-10{padding-right:2.5rem}.sm\:pt-0{padding-top:0.0rem}.sm\:pt-10{padding-top:2.5rem}.sm\:text-5xl{font-size:3.00rem;line-height:3.50rem}}
     @media (min-width: 768px){.md\:mb-0{margin-bottom:0.0rem}.md\:ml-0{margin-left:0.0rem}.md\:ml-auto{margin-left:auto}.md\:mr-0{margin-right:0.0rem}.md\:mr-auto{margin-right:auto}.md\:mt-0{margin-top:0.0rem}.md\:grid-cols-2{grid-template-columns:repeat(2, minmax(0, 1fr))}.md\:grid-cols-3{grid-template-columns:repeat(3, minmax(0, 1fr))}.md\:flex-row{flex-direction:row}.md\:pb-0{padding-bottom:0.0rem}.md\:pb-32{padding-bottom:8.0rem}.md\:pl-0{padding-left:0.0rem}.md\:pl-10{padding-left:2.5rem}.md\:pr-0{padding-right:0.0rem}.md\:pr-10{padding-right:2.5rem}.md\:pt-0{padding-top:0.0rem}.md\:pt-14{padding-top:3.5rem}.md\:text-left{text-align:left}.md\:text-5xl{font-size:3.00rem;line-height:3.50rem}}
     @media (min-width: 1024px){.lg\:grid-cols-4{grid-template-columns:repeat(4, minmax(0, 1fr))}.lg\:pb-0{padding-bottom:0.0rem}.lg\:pb-40{padding-bottom:10.0rem}.lg\:pl-0{padding-left:0.0rem}.lg\:pl-10{padding-left:2.5rem}.lg\:pr-0{padding-right:0.0rem}.lg\:pr-10{padding-right:2.5rem}.lg\:pt-0{padding-top:0.0rem}.lg\:pt-32{padding-top:8.0rem}.lg\:text-7xl{font-size:4.50rem;line-height:5.50rem}}
-    @media (min-width: 1280px){.xl\:w-\[70\%\]{width:70%}.xl\:pb-52{padding-bottom:13.0rem}.xl\:pl-10{padding-left:2.5rem}.xl\:pr-10{padding-right:2.5rem}.xl\:pt-0{padding-top:0.0rem}}
+    @media (min-width: 1280px){.xl\:w-\[70\%\]{width:70%}.xl\:justify-between{justify-content:space-between}.xl\:pb-52{padding-bottom:13.0rem}.xl\:pl-10{padding-left:2.5rem}.xl\:pr-10{padding-right:2.5rem}.xl\:pt-0{padding-top:0.0rem}}
     @media (prefers-color-scheme: dark){.dark\:bg-opacity-\[0\%\]{--tw-bg-opacity:0%}.dark\:bg-opacity-\[100\%\]{--tw-bg-opacity:100%}.dark\:bg-opacity-\[70\%\]{--tw-bg-opacity:70%}.dark\:text-opacity-\[100\%\]{--tw-text-opacity:100%}.dark\:hover\:bg-opacity-\[100\%\]:hover{--tw-bg-opacity:100%}.dark\:hover\:text-opacity-\[100\%\]:hover{--tw-text-opacity:100%}}
     .\[\&\>\*\]\:col-start-1>*{grid-column-start:1}
     .\[\&\>\*\]\:row-start-1>*{grid-row-start:1}
